Fixed z-index of custom rendered highlighted chessboard areas
See
[the ticket](https://trello.com/c/pG2vPXnP/108-highlighted-duplicate-move-areas-are-rendered-above-pieces)
for more details

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -246,7 +246,6 @@ input[type="text"].ccHelper-input::placeholder {
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 1;
     pointer-events: none;
 }
 
